// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCode > should generate code for %1 inline-map-node-with-state-variables.ts > nodes/map_with_state/state.py 1`] = `
"from typing import Optional, Union

from vellum.workflows.state import BaseState


class State(BaseState):
    inner_counter: Optional[Union[float, int]] = 0
"
`;

exports[`generateCode > should generate code for %1 inline-map-node-with-state-variables.ts > state.py 1`] = `
"from typing import Optional, Union

from vellum.workflows.state import BaseState


class State(BaseState):
    parent_counter: Optional[Union[float, int]] = 0
"
`;
